# ON-DEM-WG1-mercurydpm-JAX

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
src/: main.cpp
src/mercurydpm2jax/: __init__.py
test/: test_ffi.py
